[project]
name = "pine-mushroom-shop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "alembic>=1.17.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.119.0",
    "greenlet>=3.2.4",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]

[dependency-groups]
dev = [
    "coverage>=7.11.0",
    "coverage-badge>=1.1.2",
    "httpx[cli]>=0.28.1",
    "pytest>=8.4.2",
    "ruff>=0.14.1",
    "pre-commit>=4.3.0",
    "pytest-asyncio>=1.2.0",
]
